# AIDeployment

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.cfg
elastic/: index_mapping.json  kibana_saved_objects.ndjson
examples/: sample_articles.json
report/: NOTE_TEMPLATE.md
src/osint_ner/: __init__.py  __main__.py  analyze.py  annotate.py  cli.py  config.py  es_ingest.py  extract.py  infer.py  review.py  schemas.py  spacy_convert.py  train_config.py
src/osint_ner/gazetteers/: mil_orgs.txt  mil_units.txt  weapons.txt
tests/: conftest.py  test_analyze.py  test_annotate.py  test_es_ingest.py  test_es_mapping.py  test_extract.py  test_review.py  test_spacy_convert.py  test_train_config.py
