[project]
name = "osint-ner"
version = "0.1.0"
description = "OSINT NER pipeline for TASS 'War' articles: extraction, annotation, spaCy fine-tuning, inference, Elasticsearch ingestion."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "spacy>=3.7,<3.9",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "elasticsearch>=8.12,<9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osint_ner"]

[tool.hatch.build.targets.wheel.force-include]
"src/osint_ner/gazetteers" = "osint_ner/gazetteers"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: exercises a real spaCy training run; skipped by default (deselect with -m \"not slow\")",
]
addopts = "-m 'not slow'"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["osint_ner"]
